service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fio-benchmark
spec:
  ports:
    - port: 80
      targetPort: http
      name: http
  selector:
    app: fio-benchmark
  type: ClusterIP
