route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: fio-benchmark
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: fio-benchmark
    weight: 100
  wildcardPolicy: None
